--- a/main_file.bib
+++ b/main_file.bib
@@ -1,3 +1,17 @@
+@article{min_dom,
+title = "Increasing tree search efficiency for constraint satisfaction problems",
+journal = "Artificial Intelligence",
+volume = "14",
+number = "3",
+pages = "263 - 313",
+year = "1980",
+note = "",
+issn = "0004-3702",
+doi = "http://dx.doi.org/10.1016/0004-3702(80)90051-X",
+url = "http://www.sciencedirect.com/science/article/pii/000437028090051X",
+author = "Robert M. Haralick and Gordon L. Elliott"
+}
+
 ﻿﻿@Inbook{Gay2015,
 author="Gay, Steven
 and Hartert, Renaud
@@ -399,6 +413,41 @@ pages="562--577",
 isbn="978-3-642-40627-0",
 doi="10.1007/978-3-642-40627-0_42",
 url="http://dx.doi.org/10.1007/978-3-642-40627-0_42"
+}
+
+@article{ExtEF,
+ author = {Mercier, Luc and Van Hentenryck, Pascal},
+ title = {Edge Finding for Cumulative Scheduling},
+ journal = {INFORMS J. on Computing},
+ issue_date = {Winter 2008},
+ volume = {20},
+ number = {1},
+ month = jan,
+ year = {2008},
+ issn = {1526-5528},
+ pages = {143--153},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1287/ijoc.1070.0226},
+ doi = {10.1287/ijoc.1070.0226},
+ acmid = {1528488},
+ publisher = {INFORMS},
+ address = {Institute for Operations Research and the Management Sciences (INFORMS), Linthicum, Maryland, USA},
+ keywords = {constraint based scheduling, cumulative resources, edge finding},
+} 
+
+
+
+@Inbook{V11,
+author="Vil{\'i}m, Petr",
+title="Timetable Edge Finding Filtering Algorithm for Discrete Cumulative Resources",
+bookTitle="Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="230--245",
+isbn="978-3-642-21311-3",
+doi="10.1007/978-3-642-21311-3_22",
+url="http://dx.doi.org/10.1007/978-3-642-21311-3_22"
 }
 
 
